feat(cors): enhance CORS configuration and update related services